@@ -1,3 +1,9 @@
+2007-04-16 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* doctest imports pdb which imports readline, this means readline
+	  can be imported when a dummy object has replaced stdout. The dummy 
+	  might miss the encoding property. We now assume stdout.encoding=="ascii" 
+	  in this case.
+	
 2007-04-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Changing binding for control-delete to forward_delete_word, adding tests to verify binding
 	
